--- a/要件定義.yaml
+++ b/要件定義.yaml
@@ -25,7 +25,7 @@ functional_requirements:
     - id: R1.1
       name: "アカウント登録/ログイン"
       description: |
-        Google / Apple IDによるソーシャルログインをサポート。ユーザーの手間を最小限に抑え、素早く利用開始できるようにする。
+        Google によるソーシャルログインをサポート。ユーザーの手間を最小限に抑え、素早く利用開始できるようにする。
         匿名ログインもオプションとして検討（ログアウトでデータ消失の旨を明記）。
       design_considerations: "認証UIは、ブランドイメージに合わせてカスタマイズ可能なコンポーネントを使用。"
 
