--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "firebase:emulators": "firebase emulators:start"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.1",
+    "@use-gesture/react": "^10.3.1",
     "firebase": "^11.9.1",
     "next": "15.3.3",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
