feat: Enhance log analysis and FSRS integration
- Updated analyze-log API to include userId for rate limiting and improved analysis parameters.
- Added detailed analysis fields in the response, including difficulty, retention, and emotional state.
- Implemented Firestore logic to track LLM usage limits per user.
- Enhanced save-log API to update FSRS cards and synchronize next review dates based on analysis results.
- Modified LogRecorder component to display detailed analysis results after log submission.
- Introduced new FSRS functions for managing skill cards and calculating review schedules.
- Created skills API to fetch user skills along with FSRS information.
- Updated functional requirements to reflect new FSRS integration and analysis capabilities.

--- a/要件定義.yaml
+++ b/要件定義.yaml
@@ -49,6 +49,7 @@ functional_requirements:
         Web Speech APIで音声をテキストに変換。
         変換されたテキストをLLM APIに送信し、練習技能、程度、主観的な感覚（苦手、スムーズなど）を分析・推定し、データベースに保存。
         LLM分析結果に基づき、該当技能の忘却度合いを判断し、復習間隔を調整する。
+        また、fsrs（忘却曲線アルゴリズム）を用いるためにLLMの分析からパラメーターを作ってもらう。
       design_considerations: "マイクボタンは視認性が高く、タップしやすいサイズと位置。音声入力中は波形アニメーションなどで入力中であることを視覚的にフィードバック。ボタンのスタイルやアニメーションはテーマ変数で調整可能。入力コンポーネントは独立させ、再利用性を高める。"
     - id: R3.2
       name: "手動での簡易ログ記録 (フォールバック)"
@@ -58,10 +59,9 @@ functional_requirements:
   # 2.4. 忘却曲線学習と復習リマインダー (Forgetting Curve & Reminder)
   forgetting_curve_and_reminder:
     - id: R4.1
-      name: "簡易忘却曲線アルゴリズム"
+      name: "忘却曲線アルゴリズム"
       description: |
-        LLM分析結果（R3.1）、前回の練習/復習からの期間に基づいて、次の復習推奨日を計算する。
-        初期は基本的な間隔反復のルールを適用し、データ蓄積に応じて精度向上を目指す。
+        LLM分析結果（R3.1）、前回の練習/復習からの期間に基づいて、次の復習推奨日をts-fsrsアルゴリズムで計算する。
       design_considerations: "バックエンド処理のため直接的なUI要素はないが、計算結果の表示スタイルはカスタマイズ可能。"
     - id: R4.2
       name: "復習推奨日表示"
