--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ts-fsrs": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
