--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
+    "@types/web-push": "^3.6.4",
     "@use-gesture/react": "^10.3.1",
     "firebase": "^11.9.1",
+    "firebase-admin": "^13.4.0",
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ts-fsrs": "^5.2.0"
+    "ts-fsrs": "^5.2.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
